--- a/wp-content/litespeed/css/d3670502ae13a5e7abcb55ff5adfeed3.css
+++ b/wp-content/litespeed/css/d3670502ae13a5e7abcb55ff5adfeed3.css
@@ -666,14 +666,14 @@
     --flex-direction: row;
     --container-widget-width: initial;
     --container-widget-height: 100%;
-    --container-widget-flex-grow: 1;
+
     --container-widget-align-self: stretch;
     --gap: 20px;
     --background-transition: .3s;
     --margin-top: 40px;
     --margin-right: 0px;
     --margin-bottom: 0px;
-    --margin-left: 0px
+    --margin-left: 20%
 }
 
 .elementor-246 .elementor-element.elementor-element-176310e {
@@ -7672,6 +7672,7 @@
     --container-widget-flex-grow: 0;
     --container-widget-align-self: initial;
     --gap: 0px;
+    --margin-left:20vw;
     --background-transition: .3s;
     border-style: solid;
     --border-style: solid;
